improve edit profile sizing on mobile, fix longitude display

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,3 +30,7 @@ ul.navbar, ul.navbar li {
     background-color: #FBA100;
     color: black;
 }
+
+.col-sm-6 {
+    margin-top: 10px;
+}
